// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`core SQL (clickhouse) > and-or 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND ((orders.Status = 'paid' AND orders.Amount > 15) OR orders.Customer = 'globex')
        ORDER BY id ASC",
}
`;

exports[`core SQL (clickhouse) > arithmetic 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Amount + 1 AS added,
          orders.Amount - 1 AS subtracted,
          orders.Amount * 2 AS multiplied,
          orders.Amount % 3 AS remainder,
          orders.Amount / 2 AS divided
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Id = 4",
}
`;

exports[`core SQL (clickhouse) > comparisons 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Status != 'void'
          AND orders.Amount > 5
          AND orders.Amount >= 10
          AND orders.Amount < 20
          AND orders.Amount <= 10",
}
`;

exports[`core SQL (clickhouse) > cross-join 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id,
          c.Name AS customer
        FROM orders
        CROSS JOIN customers AS c
        WHERE orders.OrgId = 'org_1'
          AND c.OrgId = 'org_1'
          AND orders.Id <= 2
        ORDER BY id ASC, customer ASC",
}
`;

exports[`core SQL (clickhouse) > cross-join-subquery 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id,
          k.customers AS customers
        FROM orders
        CROSS JOIN (WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          count() AS customers
        FROM customers
        WHERE customers.OrgId = 'org_1') AS k
        WHERE orders.OrgId = 'org_1'
          AND orders.Id <= 2
        ORDER BY id ASC",
}
`;

exports[`core SQL (clickhouse) > cte 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
),
paid AS (
WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Customer AS Customer,
          orders.Amount AS Amount
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Status = 'paid'
)
SELECT
          sum(paid.Amount) AS total
        FROM paid",
}
`;

exports[`core SQL (clickhouse) > distinct 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT DISTINCT ON (customer)
          orders.Customer AS customer,
          orders.Id AS id
        FROM orders
        WHERE orders.OrgId = 'org_1'
        ORDER BY customer ASC, id DESC",
}
`;

exports[`core SQL (clickhouse) > distinct-plain 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT DISTINCT
          orders.Status AS status
        FROM orders
        WHERE orders.OrgId = 'org_1'
        ORDER BY status ASC",
}
`;

exports[`core SQL (clickhouse) > format 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Id = 1
        FORMAT JSON",
}
`;

exports[`core SQL (clickhouse) > from-subquery 1`] = `
{
  "parameters": [],
  "sql": "SELECT
          t.customer AS customer,
          t.total AS total
        FROM (WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.OrgId AS OrgId,
          orders.Customer AS customer,
          sum(orders.Amount) AS total
        FROM orders
        WHERE orders.OrgId = 'org_1'
        GROUP BY OrgId, customer) AS t
        WHERE t.total > 6
        ORDER BY total DESC",
}
`;

exports[`core SQL (clickhouse) > group-having 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Customer AS customer,
          count() AS orders,
          countIf(orders.Status = 'paid') AS paid,
          sum(orders.Amount) AS total,
          min(orders.Amount) AS smallest,
          max(orders.Amount) AS largest
        FROM orders
        WHERE orders.OrgId = 'org_1'
        GROUP BY customer
        HAVING count() >= 2
        ORDER BY customer ASC",
}
`;

exports[`core SQL (clickhouse) > inner-join 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id,
          c.Tier AS tier
        FROM orders
        INNER JOIN customers AS c ON (orders.Customer = c.Name AND orders.OrgId = c.OrgId)
        WHERE orders.OrgId = 'org_1'
        ORDER BY id ASC",
}
`;

exports[`core SQL (clickhouse) > is-not-null 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Note IS NOT NULL
        ORDER BY id ASC",
}
`;

exports[`core SQL (clickhouse) > join-subqueries 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          customers.Name AS name,
          t.tier AS tier,
          n.orders AS orders
        FROM customers
        INNER JOIN (WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          customers.Name AS name,
          customers.Tier AS tier
        FROM customers
        WHERE customers.OrgId = 'org_1'
          AND customers.Tier != 'silver') AS t ON customers.Name = t.name
        LEFT JOIN (WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Customer AS customer,
          count() AS orders
        FROM orders
        WHERE orders.OrgId = 'org_1'
        GROUP BY customer) AS n ON customers.Name = n.customer
        WHERE customers.OrgId = 'org_1'
        ORDER BY name ASC",
}
`;

exports[`core SQL (clickhouse) > left-join 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id,
          c.Tier AS tier
        FROM orders
        LEFT JOIN customers AS c ON (orders.Customer = c.Name AND orders.OrgId = c.OrgId)
        WHERE orders.OrgId = 'org_1'
          AND orders.Id >= 3
        ORDER BY id ASC",
}
`;

exports[`core SQL (clickhouse) > limit-offset 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id
        FROM orders
        WHERE orders.OrgId = 'org_1'
        ORDER BY id DESC
        LIMIT 2
        OFFSET 1",
}
`;

exports[`core SQL (clickhouse) > null-and-range 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Note IS NULL
          AND orders.Amount BETWEEN 5 AND 20
          AND orders.Id NOT BETWEEN 3 AND 3
        ORDER BY id ASC",
}
`;

exports[`core SQL (clickhouse) > nulls-and-literals 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id,
          orders.Note AS note,
          coalesce(orders.Note, '-') AS shown,
          'x\\'y' AS label
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Id IN (2, 4)
        ORDER BY id ASC",
}
`;

exports[`core SQL (clickhouse) > params 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id,
          orders.Created AS created
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Amount >= 7
          AND orders.Amount < 19.5
          AND orders.Created >= '2026-01-01 00:00:00'
        ORDER BY id ASC",
}
`;

exports[`core SQL (clickhouse) > patterns-and-lists 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND (orders.Customer LIKE '%e%' AND orders.Customer NOT LIKE 'i%')
          AND (orders.Status ILIKE 'PA%' OR orders.Status IN ('open'))
          AND orders.Id NOT IN (3)
          AND NOT (orders.Id = 2)
        ORDER BY id ASC",
}
`;

exports[`core SQL (clickhouse) > route-and-cross-tenant 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          count() AS orders
        FROM orders",
}
`;

exports[`core SQL (clickhouse) > select-columns 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS Id,
          orders.Customer AS Customer
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Status = 'paid'
        ORDER BY Id ASC",
}
`;

exports[`core SQL (clickhouse) > selected-param 1`] = `
{
  "parameters": [],
  "sql": "WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id,
          1 AS flagged
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Id = 1",
}
`;

exports[`core SQL (clickhouse) > union 1`] = `
{
  "parameters": [],
  "sql": "SELECT * FROM (
WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Status AS status,
          sum(orders.Amount) AS total
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Status = 'paid'
        GROUP BY status
UNION ALL
WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Status AS status,
          sum(orders.Amount) AS total
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Status = 'open'
        GROUP BY status
UNION ALL
WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Status AS status,
          sum(orders.Amount) AS total
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Status = 'void'
        GROUP BY status
)
ORDER BY total DESC
LIMIT 2
OFFSET 1",
}
`;

exports[`core SQL (clickhouse) > union-format 1`] = `
{
  "parameters": [],
  "sql": "SELECT * FROM (
WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Id = 1
UNION ALL
WITH orders AS (
<orders fixture>
),
customers AS (
<customers fixture>
)
SELECT
          orders.Id AS id
        FROM orders
        WHERE orders.OrgId = 'org_1'
          AND orders.Id = 2
)
ORDER BY id ASC
FORMAT JSON",
}
`;

exports[`core SQL (postgres) > and-or 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND (("orders"."Status" = 'paid' AND "orders"."Amount" > 15) OR "orders"."Customer" = 'globex')
        ORDER BY "id" ASC",
}
`;

exports[`core SQL (postgres) > arithmetic 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Amount" + 1 AS "added",
          "orders"."Amount" - 1 AS "subtracted",
          "orders"."Amount" * 2 AS "multiplied",
          "orders"."Amount" % 3 AS "remainder",
          "orders"."Amount" / 2 AS "divided"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Id" = 4",
}
`;

exports[`core SQL (postgres) > comparisons 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Status" != 'void'
          AND "orders"."Amount" > 5
          AND "orders"."Amount" >= 10
          AND "orders"."Amount" < 20
          AND "orders"."Amount" <= 10",
}
`;

exports[`core SQL (postgres) > cross-join 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id",
          "c"."Name" AS "customer"
        FROM "orders"
        CROSS JOIN "customers" AS "c"
        WHERE "orders"."OrgId" = $1
          AND "c"."OrgId" = 'org_1'
          AND "orders"."Id" <= 2
        ORDER BY "id" ASC, "customer" ASC",
}
`;

exports[`core SQL (postgres) > cross-join-subquery 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id",
          "k"."customers" AS "customers"
        FROM "orders"
        CROSS JOIN (WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          count(*) AS "customers"
        FROM "customers"
        WHERE "customers"."OrgId" = $1) AS "k"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Id" <= 2
        ORDER BY "id" ASC",
}
`;

exports[`core SQL (postgres) > cte 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
),
"paid" AS (
WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Customer" AS "Customer",
          "orders"."Amount" AS "Amount"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Status" = 'paid'
)
SELECT
          sum("paid"."Amount") AS "total"
        FROM "paid"",
}
`;

exports[`core SQL (postgres) > distinct 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT DISTINCT ON ("customer")
          "orders"."Customer" AS "customer",
          "orders"."Id" AS "id"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
        ORDER BY "customer" ASC, "id" DESC",
}
`;

exports[`core SQL (postgres) > distinct-plain 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT DISTINCT
          "orders"."Status" AS "status"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
        ORDER BY "status" ASC",
}
`;

exports[`core SQL (postgres) > from-subquery 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "SELECT
          "t"."customer" AS "customer",
          "t"."total" AS "total"
        FROM (WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."OrgId" AS "OrgId",
          "orders"."Customer" AS "customer",
          sum("orders"."Amount") AS "total"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
        GROUP BY 1, 2) AS "t"
        WHERE "t"."total" > 6
        ORDER BY "total" DESC",
}
`;

exports[`core SQL (postgres) > group-having 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Customer" AS "customer",
          count(*) AS "orders",
          count(*) FILTER (WHERE "orders"."Status" = 'paid') AS "paid",
          sum("orders"."Amount") AS "total",
          min("orders"."Amount") AS "smallest",
          max("orders"."Amount") AS "largest"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
        GROUP BY 1
        HAVING count(*) >= 2
        ORDER BY "customer" ASC",
}
`;

exports[`core SQL (postgres) > inner-join 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id",
          "c"."Tier" AS "tier"
        FROM "orders"
        INNER JOIN "customers" AS "c" ON ("orders"."Customer" = "c"."Name" AND "orders"."OrgId" = "c"."OrgId")
        WHERE "orders"."OrgId" = $1
        ORDER BY "id" ASC",
}
`;

exports[`core SQL (postgres) > is-not-null 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Note" IS NOT NULL
        ORDER BY "id" ASC",
}
`;

exports[`core SQL (postgres) > join-subqueries 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "customers"."Name" AS "name",
          "t"."tier" AS "tier",
          "n"."orders" AS "orders"
        FROM "customers"
        INNER JOIN (WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "customers"."Name" AS "name",
          "customers"."Tier" AS "tier"
        FROM "customers"
        WHERE "customers"."OrgId" = $1
          AND "customers"."Tier" != 'silver') AS "t" ON "customers"."Name" = "t"."name"
        LEFT JOIN (WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Customer" AS "customer",
          count(*) AS "orders"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
        GROUP BY 1) AS "n" ON "customers"."Name" = "n"."customer"
        WHERE "customers"."OrgId" = $1
        ORDER BY "name" ASC",
}
`;

exports[`core SQL (postgres) > left-join 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id",
          "c"."Tier" AS "tier"
        FROM "orders"
        LEFT JOIN "customers" AS "c" ON ("orders"."Customer" = "c"."Name" AND "orders"."OrgId" = "c"."OrgId")
        WHERE "orders"."OrgId" = $1
          AND "orders"."Id" >= 3
        ORDER BY "id" ASC",
}
`;

exports[`core SQL (postgres) > limit-offset 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
        ORDER BY "id" DESC
        LIMIT 2
        OFFSET 1",
}
`;

exports[`core SQL (postgres) > locking 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Id" = 1
        FOR UPDATE SKIP LOCKED",
}
`;

exports[`core SQL (postgres) > null-and-range 1`] = `
{
  "parameters": [
    "org_1",
    20,
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Note" IS NULL
          AND "orders"."Amount" BETWEEN 5 AND $2
          AND "orders"."Id" NOT BETWEEN 3 AND 3
        ORDER BY "id" ASC",
}
`;

exports[`core SQL (postgres) > nulls-and-literals 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id",
          "orders"."Note" AS "note",
          coalesce("orders"."Note", '-') AS "shown",
          'x''y' AS "label"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Id" IN (2, 4)
        ORDER BY "id" ASC",
}
`;

exports[`core SQL (postgres) > params 1`] = `
{
  "parameters": [
    "org_1",
    7,
    19.5,
    "2026-01-01T00:00:00.000Z",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id",
          "orders"."Created" AS "created"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Amount" >= $2
          AND "orders"."Amount" < $3::float8
          AND "orders"."Created" >= $4::timestamptz
        ORDER BY "id" ASC",
}
`;

exports[`core SQL (postgres) > patterns-and-lists 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND ("orders"."Customer" LIKE '%e%' AND "orders"."Customer" NOT LIKE 'i%')
          AND ("orders"."Status" ILIKE 'PA%' OR "orders"."Status" IN ('open'))
          AND "orders"."Id" NOT IN (3)
          AND NOT ("orders"."Id" = 2)
        ORDER BY "id" ASC",
}
`;

exports[`core SQL (postgres) > route-and-cross-tenant 1`] = `
{
  "parameters": [],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          count(*) AS "orders"
        FROM "orders"",
}
`;

exports[`core SQL (postgres) > select-columns 1`] = `
{
  "parameters": [
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "Id",
          "orders"."Customer" AS "Customer"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Status" = 'paid'
        ORDER BY "Id" ASC",
}
`;

exports[`core SQL (postgres) > selected-param 1`] = `
{
  "parameters": [
    true,
    "org_1",
  ],
  "sql": "WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Id" AS "id",
          $1::boolean AS "flagged"
        FROM "orders"
        WHERE "orders"."OrgId" = $2
          AND "orders"."Id" = 1",
}
`;

exports[`core SQL (postgres) > union 1`] = `
{
  "parameters": [
    "org_1",
    "paid",
    "open",
    "void",
  ],
  "sql": "SELECT * FROM (
(
WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Status" AS "status",
          sum("orders"."Amount") AS "total"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Status" = $2
        GROUP BY 1
)
UNION ALL
(
WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Status" AS "status",
          sum("orders"."Amount") AS "total"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Status" = $3
        GROUP BY 1
)
UNION ALL
(
WITH "orders" AS (
<orders fixture>
),
"customers" AS (
<customers fixture>
)
SELECT
          "orders"."Status" AS "status",
          sum("orders"."Amount") AS "total"
        FROM "orders"
        WHERE "orders"."OrgId" = $1
          AND "orders"."Status" = $4
        GROUP BY 1
)
) AS "__union"
ORDER BY "total" DESC
LIMIT 2
OFFSET 1",
}
`;
